--- a/components/Navbar/styles.module.scss
+++ b/components/Navbar/styles.module.scss
@@ -10,11 +10,20 @@
     select {
       width: 100px;
     }
-    a {
+    button {
       color: white;
       background-color: #e40a15;
       padding: 7px 17px;
       border-radius: 3px;
+      border: none;
+      cursor: pointer;
+    }
+  }
+  a {
+    font-weight: 500;
+    font-size: large;
+    &:hover {
+      text-decoration: underline;
     }
   }
 }
