--- a/components/HeroSection/styles.module.scss
+++ b/components/HeroSection/styles.module.scss
@@ -14,7 +14,7 @@
     align-items: center;
     flex-direction: column;
     width: 70%;
-    margin: 150px auto 200px auto;
+    margin: 150px auto 150px auto;
     .header {
       text-align: center;
       width: 600px;
@@ -34,7 +34,7 @@
       align-items: center;
       input {
         width: 70%;
-        height: 60px;
+        height: 70px;
         padding: 20px;
         font-size: medium;
         &:focus {
@@ -43,7 +43,7 @@
       }
       button {
         width: 30%;
-        height: 60px;
+        height: 70px;
         color: white;
         cursor: pointer;
         background-color: #e40a15;
@@ -51,6 +51,17 @@
         border: none;
         letter-spacing: 1px;
       }
+      .inputError {
+        border-top: 0;
+        border-left: 0;
+        border-right: 0;
+        border-bottom: 3px solid #ffa00a;
+      }
+    }
+    .error {
+      color: #ffa00a;
+      margin: 8px 585px 0 0;
+      font-size: 15px;
     }
   }
 }
