--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,21 @@
+@font-face {
+  font-family: "netflix-rg";
+  font-display: swap;
+  src: url("../assets/fonts/NetflixSans_W_Rg.woff2") format("woff2");
+}
+@font-face {
+  font-family: "netflix-md";
+  font-display: swap;
+  src: url("../assets/fonts/NetflixSans_W_Md.woff2") format("woff2");
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "netflix-rg", "netflix-md", -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
 }
 
 a {
