--- a/components/ProfileOverlay/styles.module.scss
+++ b/components/ProfileOverlay/styles.module.scss
@@ -13,12 +13,27 @@
       width: fit-content;
       padding: 0;
       list-style-type: none;
-      li {
+      .profile {
         height: fit-content;
         width: fit-content;
         text-align: center;
         cursor: pointer;
         margin: 0 50px;
+        img {
+          width: 200px;
+          height: 200px;
+        }
+        p {
+          color: #5e5c5c;
+        }
+        &:hover {
+          img {
+            border: 4px solid #e4e4e4;
+          }
+          p {
+            color: #e4e4e4;
+          }
+        }
       }
     }
     h2 {
